@@ -1,3 +1,11 @@
+2013-06-25 Chris Kelly <christopher.kelly28@googlemail.com>
+
+	* CMakeLists.txt: (0.5.1)
+	
+	- Windows finds the source code directory of ITK rather than the 
+	installed ITK, so we have to tell it where to find the correct
+	directory.
+
 2013-06-25  Ramon Casero  <rcasero@gmail.com>
 
 	* Add matlab/ManifoldToolbox/check_sphtrisurf_vertices.m: (0.1.0)
